php-fpm 未能正常返回处理结果

--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,13 +1,23 @@
 server {
-    listen       80;
+    listen       80 default_server;
+    listen       [::]:80 default_server;
+    
     server_name  localhost;
 
     #charset koi8-r;
     #access_log  /var/log/nginx/host.access.log  main;
+    root  /usr/share/nginx/html;
 
     location / {
-        root   /usr/share/nginx/html;
-        index  index.html index.htm;
+        index  index.php index.html index.htm;
+        autoindex on;
+    }
+
+    location ~ \.php$ {
+       fastcgi_pass   php-fpm:9000;  #此处写docker里边php 的名称: my_php
+       fastcgi_index  index.php;
+       fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
+       include        fastcgi_params;
     }
 
     #error_page  404              /404.html;
@@ -27,13 +37,13 @@ server {
 
     # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
     #
-    #location ~ \.php$ {
+    # location ~ \.php$ {
     #    root           html;
     #    fastcgi_pass   127.0.0.1:9000;
     #    fastcgi_index  index.php;
     #    fastcgi_param  SCRIPT_FILENAME  /scripts$fastcgi_script_name;
     #    include        fastcgi_params;
-    #}
+    # }
 
     # deny access to .htaccess files, if Apache's document root
     # concurs with nginx's one
