--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,31 +1,36 @@
 version: "3.7"
 services:
-  php:
+  php-fpm:
     build: ./php
     image: php:5.6.31
+    volumes:
+     - ./php/config/php.ini:/etc/php/php.ini
+     - ./php/config/php-fpm.conf:/etc/php/php-fpm.conf
+     - ./php/config/conf.d:/etc/php/conf.d
     restart: always
-    ports:
-      - "9000:9000"
-    container_name: my_php
+    container_name: php-fpm
   nginx:
     image: nginx:stable-alpine
     depends_on:
-      - "php"
+      - php-fpm
+    links:
+      - php-fpm:php-fpm
     restart: always
-    container_name: my_nginx
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
       - ./nginx/conf.d:/etc/nginx/conf.d
       - ./nginx/cert:/etc/nginx/cert
       - ./nginx/html:/usr/share/nginx/html
+      - ./nginx/log:/var/log/nginx
     ports:
-      - "8080:80"
+      - "80:80"
+    container_name: my_nginx
   redis:
     image: redis:5.0
     restart: always
-    container_name: my_redis
     volumes:
       - ./redis/data:/data
       - ./redis/redis.conf:/etc/redis/redis.conf
     ports:
       - 6379:6379
+    container_name: my_redis
