--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -5,19 +5,19 @@ server {
     server_name  localhost;
 
     #charset koi8-r;
-    #access_log  /var/log/nginx/host.access.log  main;
-    root  /usr/share/nginx/html;
+    access_log  /var/log/nginx/host.access.log  main;
+
+    root  /usr/share/www;
 
     location / {
         index  index.php index.html index.htm;
-        autoindex on;
     }
 
     location ~ \.php$ {
+       include        fastcgi_params;
        fastcgi_pass   php-fpm:9000;  #此处写docker里边php 的名称: my_php
        fastcgi_index  index.php;
        fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
-       include        fastcgi_params;
     }
 
     #error_page  404              /404.html;
@@ -26,7 +26,7 @@ server {
     #
     error_page   500 502 503 504  /50x.html;
     location = /50x.html {
-        root   /usr/share/nginx/html;
+        root   /usr/share/www;
     }
 
     # proxy the PHP scripts to Apache listening on 127.0.0.1:80
