--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -7,17 +7,20 @@ server {
     #charset koi8-r;
     access_log  /var/log/nginx/host.access.log  main;
 
-    root  /usr/share/www;
-
     location / {
+        root  /usr/share/www;
         index  index.php index.html index.htm;
     }
 
     location ~ \.php$ {
-       include        fastcgi_params;
-       fastcgi_pass   php-fpm:9000;  #此处写docker里边php 的名称: my_php
-       fastcgi_index  index.php;
-       fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
+        root  /usr/share/www;
+        include        fastcgi_params;
+        fastcgi_pass   php-fpm:9000;  #此处写docker里边php 的名称: my_php
+        # 设置nginx的默认首页文件(上面已经设置过了，可以删除)
+        fastcgi_index  index.php;
+        # 设置脚本文件请求的路径
+        fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
+        # 引入fastcgi的配置文件
     }
 
     #error_page  404              /404.html;
