--- a/php/config/php-fpm.conf
+++ b/php/config/php-fpm.conf
@@ -132,7 +132,7 @@ daemonize = no
 ; Per pool prefix
 ; It only applies on the following directives:
 ; - 'access.log'
-access.log = /var/log/$pool.access.log
+# access.log = /var/log/$pool.access.log
 ; - 'slowlog'
 ; - 'listen' (unixsocket)
 ; - 'chroot'
