--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,30 @@
 version: "3.7"
 services:
-  php-fpm:
-    build: ./php
-    image: php:5.6.31
+  php56-fpm:
+    build: ./php56-fpm
+    image: php:5.6
     volumes:
-     - ./php/config/php.ini:/etc/php/php.ini
-     - ./php/config/php-fpm.conf:/etc/php/php-fpm.conf
-     - ./php/config/conf.d:/etc/php/conf.d
+     - ./php56-fpm/config/php.ini:/etc/php/php.ini
+     - ./php56-fpm/config/php-fpm.conf:/etc/php/php-fpm.conf
+     - ./php56-fpm/config/conf.d:/etc/php/conf.d
     restart: always
-    container_name: php-fpm
+    container_name: php56-fpm
+  # php-fpm:
+  #   image: php:7.2-cli
+  #   restart: always
+  #   container_name: php-fpm
   nginx:
     image: nginx:stable-alpine
     depends_on:
-      - php-fpm
+      - php56-fpm
     links:
-      - php-fpm:php-fpm
+      - php56-fpm:php-fpm
     restart: always
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
       - ./nginx/conf.d:/etc/nginx/conf.d
       - ./nginx/cert:/etc/nginx/cert
-      - ./nginx/html:/usr/share/www
+      - ./nginx/html:/usr/share/nginx/html
       - ./nginx/log:/var/log/nginx
     ports:
       - "80:80"
