--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,21 @@
 version: "3.7"
 services:
-  php56-fpm:
-    build: ./php56-fpm
-    image: php:5.6
+  php56:
+    build: ./php56
+    image: php56:test
     volumes:
-     - ./php56-fpm/config/php.ini:/etc/php/php.ini
-     - ./php56-fpm/config/php-fpm.conf:/etc/php/php-fpm.conf
-     - ./php56-fpm/config/conf.d:/etc/php/conf.d
+     - ./php56/config/php.ini:/etc/php/php.ini
+     - ./php56/config/php-fpm.conf:/etc/php/php-fpm.conf
+     - ./php56/config/conf.d:/etc/php/conf.d
     restart: always
-    container_name: php56-fpm
-  # php-fpm:
-  #   image: php:7.2-cli
-  #   restart: always
-  #   container_name: php-fpm
+    container_name: my_php
   nginx:
+    # build: ./nginx
     image: nginx:stable-alpine
     depends_on:
-      - php56-fpm
+      - php56
     links:
-      - php56-fpm:php-fpm
+      - php56:php-fpm
     restart: always
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
