--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,27 @@
 version: "3.7"
 services:
+  # php56:
+  #   build: ./php56
+  #   image: php:5.6.31
+  #   ports:
+  #     - 9000:9000
+  #   volumes:
+  #    - ./php56/config/php.ini:/etc/php/php.ini
+  #    - ./php56/config/php-fpm.conf:/etc/php/php-fpm.conf
+  #    - ./php56/config/conf.d:/etc/php/conf.d
+  #   privileged: true
+  #   restart: always
+  #   container_name: my_php
+  #   networks:
+  #     - default
   php56:
-    build: ./php56
-    image: php:5.6.31
-    ports:
-      - 9000:9000
+    image: bvlcsae/php:5.6.27
     volumes:
-     - ./php56/config/php.ini:/etc/php/php.ini
-     - ./php56/config/php-fpm.conf:/etc/php/php-fpm.conf
-     - ./php56/config/conf.d:/etc/php/conf.d
-    privileged: true
+      - ./phptest/conf:/usr/local/etc
     restart: always
     container_name: my_php
-    networks:
-      - default
   nginx:
-    image: nginx:stable-alpine
+    image: nginx
     links:
       - php56:php-fpm
     restart: always
@@ -28,8 +34,6 @@ services:
     ports:
       - 80:80
     container_name: my_nginx
-    networks:
-      - default
   redis:
     image: redis:5.0
     restart: always
@@ -39,7 +43,3 @@ services:
     ports:
       - 6379:6379
     container_name: my_redis
-    networks:
-      - default
-networks:
-  default:
