成功运行了  php7.2 与 nginx 能正常解析php文件并返回

--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -8,12 +8,12 @@ server {
     access_log  /var/log/nginx/host.access.log  main;
 
     location / {
-        root   /wwwroot;
+        root   /usr/share/nginx/html;
         index  index.php index.html index.htm;
     }
 
     location ~ \.php$ {
-        root  /wwwroot;
+        root  /usr/share/nginx/html;
         include        fastcgi_params;
         fastcgi_pass   php-fpm:9000;  #此处写docker里边php 的名称: my_php
         # 设置nginx的默认首页文件(上面已经设置过了，可以删除)
@@ -29,7 +29,7 @@ server {
     #
     error_page   500 502 503 504  /50x.html;
     location = /50x.html {
-        root   /wwwroot;
+        root   /usr/share/nginx/html;
     }
 
     # proxy the PHP scripts to Apache listening on 127.0.0.1:80
