--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,11 @@
 version: "3.7"
 services:
-  # php56:
-  #   build: ./php56
-  #   image: php:5.6.31
-  #   ports:
-  #     - 9000:9000
-  #   volumes:
-  #    - ./php56/config/php.ini:/etc/php/php.ini
-  #    - ./php56/config/php-fpm.conf:/etc/php/php-fpm.conf
-  #    - ./php56/config/conf.d:/etc/php/conf.d
-  #   privileged: true
-  #   restart: always
-  #   container_name: my_php
-  #   networks:
-  #     - default
-  php56:
-    image: bvlcsae/php:5.6.27
+  php72:
+    image: php:7.2-fpm
     volumes:
-      - ./phptest/conf:/usr/local/etc
-      - ./wwwroot:/var/www/html:rw
+      - ./config/php72/php-fpm.conf:/usr/local/etc/php-fpm.conf
+      - ./config/php72/php-fpm.d:/usr/local/etc/php-fpm.d
+      - ./wwwroot:/usr/share/nginx/html
     restart: always
     container_name: my_php
     networks:
@@ -26,13 +13,13 @@ services:
   nginx:
     image: nginx
     links:
-      - php56:php-fpm
+      - php72:php-fpm
     restart: always
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
       - ./nginx/conf.d:/etc/nginx/conf.d
       - ./nginx/cert:/etc/nginx/cert
-      - ./wwwroot:/wwwroot:rw
+      - ./wwwroot:/usr/share/nginx/html
       - ./nginx/log:/var/log/nginx
     ports:
       - 80:80
