--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
     image: bvlcsae/php:5.6.27
     volumes:
       - ./phptest/conf:/usr/local/etc
-      - ./wwwroot:/var/www/html:rw
+      - ./wwwroot:/usr/share/nginx/html:rw
     restart: always
     container_name: my_php
     networks:
@@ -32,7 +32,7 @@ services:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
       - ./nginx/conf.d:/etc/nginx/conf.d
       - ./nginx/cert:/etc/nginx/cert
-      - ./wwwroot:/wwwroot:rw
+      - ./wwwroot:/usr/share/nginx/html:rw
       - ./nginx/log:/var/log/nginx
     ports:
       - 80:80
