--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,8 @@ services:
     build: ./build/php56
     image: php:5.6.27
     volumes:
-      # - ./config/php56/php-fpm.conf:/usr/local/etc/php-fpm.conf
-      # - ./config/php56/php-fpm.d:/usr/local/etc/php-fpm.d
+      - ./config/php56/php-fpm.conf:/usr/local/etc/php-fpm.conf
+      - ./config/php56/php-fpm.d:/usr/local/etc/php-fpm.d
       - ./wwwroot:/usr/share/nginx/html
     restart: always
     container_name: my_php
