--- a/config/nginx/conf.d/default.conf
+++ b/config/nginx/conf.d/default.conf
@@ -57,10 +57,10 @@ server {
 }
 
 server {
-    listen       8080 default_server;
-    listen       [::]:8080 default_server;
+    listen       80 default_server;
+    listen       [::]:80 default_server;
     
-    server_name  localhost;
+    server_name  php1.com www.php1.com test.php1.com;
 
     #charset koi8-r;
     access_log  /var/log/nginx/host.access.log  main;
