--- a/config/nginx/conf.d/default.conf
+++ b/config/nginx/conf.d/default.conf
@@ -1,6 +1,5 @@
 server {
-    listen       80 default_server;
-    listen       [::]:80 default_server;
+    listen       80;
     
     server_name  localhost;
 
@@ -57,8 +56,7 @@ server {
 }
 
 server {
-    listen       80 default_server;
-    listen       [::]:80 default_server;
+    listen       80;
     
     server_name  php1.com www.php1.com test.php1.com;
 
