--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.7"
 services:
   php56:
     build: ./build/php56
-    image: php:5.6.27
+    image: bvlcsae/php:5.6-fpm
     volumes:
       - ./config/php56/php-fpm.conf:/usr/local/etc/php-fpm.conf
       - ./config/php56/php-fpm.d:/usr/local/etc/php-fpm.d
