屏蔽ide配置文件

--- a/config/nginx/conf.d/www.php1.com.conf
+++ b/config/nginx/conf.d/www.php1.com.conf
@@ -1,20 +1,20 @@
 server {
-    listen       80;
+    listen   80;
     
-    server_name  localhost;
+    server_name  php1.com www.php1.com test.php1.com;
 
     #charset koi8-r;
     access_log  /var/log/nginx/host.access.log  main;
 
     location / {
-        root   /usr/share/nginx/html;
+        root   /usr/share/nginx/html/www.php1.com;
         index  index.php index.html index.htm;
     }
 
     location ~ \.php$ {
-        root  /usr/share/nginx/html;
+        root  /usr/share/nginx/html/www.php1.com;
         include        fastcgi_params;
-        fastcgi_pass   php-fpm56:9000;  #此处写docker里边php 的名称: my_php
+        fastcgi_pass   php-fpm72:9000;  #此处写docker里边php 的名称: my_php
         # 设置nginx的默认首页文件(上面已经设置过了，可以删除)
         fastcgi_index  index.php;
         # 设置脚本文件请求的路径
@@ -28,7 +28,7 @@ server {
     #
     error_page   500 502 503 504  /50x.html;
     location = /50x.html {
-        root   /usr/share/nginx/html;
+        root   /usr/share/nginx/html/www.php1.com;
     }
 
     # proxy the PHP scripts to Apache listening on 127.0.0.1:80
@@ -54,4 +54,3 @@ server {
     #    deny  all;
     #}
 }
-
